# audio_fingerprint

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_old.txt  DummyReader.cpp  DummyReader.h  README.md  Utils.h  WavReader.h  build.sh  build_wasm.sh  build_win.sh  consts.h  docker-compose.yml  emscripten.md  http_server.py  main.cpp  readme.txt  server.cpp  todo.txt  wasm.cpp  wasm_mock.cpp
Core/: Fingerprint.cpp  Link.cpp  Link.h  Links.cpp  Peak.cpp  Peak.h  PeaksFinder.cpp  PeaksFinder.h
IO/: WavReader.cpp
IO/Readers/: DummyReader.cpp  DummyReader.h  Reader.h  WavReader.cpp  WavReader.h
Math/: FFTWindow.h  Integers.cpp  Integers.h  Spectrogram.cpp
Utils/: FixedSizePQ.h  Utils.cpp  Utils.h  Wrapper.h
doc/: abstract.odt  biblio.bib  riassunto.lyx  riassunto2.lyx  slides.lyx  tesi.lyx  tesi.lyx~
doc/data/: c.csv  matching_time_difference.csv  matching_time_difference_hinst.csv  min_hint.csv  panako_length_success_rate.csv  recording_length_success_rate.csv  windows_success_rate.csv
fin/: CMakeLists.txt
fin/include/core/: fingerprint.h  link.h  links.h  peak.h  peaks_finder.h
fin/include/fin/: fin.h
fin/include/fin/core/: fingerprint.h  link.h  links.h  peak.h  peaks_finder.h
fin/include/fin/math/: fft_window.h  integers.h  spectrogram.h  vector.h  window.h
fin/include/fin/readers/: dummy_reader.h  reader.h  wav_reader.h
fin/include/fin/utils/: byte_buffer.h  fixed_size_pq.h  utils.h
fin/include/math/: fft_window.h  integers.h  spectrogram.h  vector.h  window.h
fin/include/readers/: reader.h
fin/include/utils/: fixed_size_pq.h  utils.h
fin/libs/fftw/: ChangeLog  INSTALL  NEWS
fin/libs/fftw/doc/: fftw3.info-1  intro.texi  legacy-fortran.texi  mpi.texi  other.texi  threads.texi  tutorial.texi
fin/libs/fftw/doc/html/: Calling-FFTW-from-Legacy-Fortran.html  Column_002dmajor-Format.html  Distributed_002dmemory-FFTW-with-MPI.html  Introduction.html  One_002dDimensional-DFTs-of-Real-Data.html  Usage-of-Multi_002dthreaded-FFTW.html  Wisdom-of-Fortran_003f.html
fin/libs/fftw/m4/: libtool.m4
fin/libs/fftw/simd-support/: simd-kcvi.h
fin/src/: fin.cpp
fin/src/core/: fingerprint.cpp  link.cpp  links.cpp  peak.cpp  peaks_finder.cpp
fin/src/math/: integers.cpp  spectrogram.cpp  window.cpp
fin/src/readers/: dummy_reader.cpp  wav_reader.cpp
fin/src/utils/: byte_buffer.cpp  utils.cpp
fin_db/: CMakeLists.txt
fin_db/include/fin_db/: db.h  fin_db.h  utils.h  wrapper.h
fin_db/src/: db.cpp  utils.cpp
libs/mariadbpp/: CMakeLists.txt
libs/xxHash/: .gitignore
libs/xxHash/cmake_unofficial/: CMakeLists.txt
lyrics/: CMakeLists.txt  i_bet.lrc  main.py  subs_converter.py
lyrics/static/: .gitignore  lyrics.cpp  shell.html  subs_old.html  template.html
mock_client/: CMakeLists.txt  main.cpp  wav_reader.cpp  wrapper.h
server/: CMakeLists.txt  db.cpp  db.h  server.cpp  utils.cpp  utils.h  wav_reader.h  wrapper.h
server_entry/: CMakeLists.txt  main.cpp
server_rest/: CMakeLists.txt  main.cpp
test_webaudio/: audio_fingerprint.js  audio_fingerprint.wasm  custom-node-processor.js  test.html
tests/min_hint/: copy_for_latex.py  data.csv  min_hint.py  sort_for_latex.py
tests/panako/: convert_for_latex.py  data.csv  panako.py
tests/recording_length_performances/: convert_for_latex.py  data.csv  recording_length.py
tests/time_difference/: convert_for_hinst.py  convert_for_latex.py  data.csv  scatter.py
tests/windows_performances/: additive_noise.py  data_blackman.csv  data_hann.csv  data_hanning.csv  data_rectangular.csv  join_data.py
wasm/: CMakeLists.txt  dummy_reader.cpp  dummy_reader.h  main.cpp  wasm.cpp  wrapper.h
wasm_client/: CMakeLists.txt  main.py
wasm_client/static/: main.cpp
